--- a/src/views/layout/Home.fxml
+++ b/src/views/layout/Home.fxml
@@ -8,11 +8,8 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
@@ -105,27 +102,48 @@
                         </HBox>
                         <AnchorPane layoutX="59.0" layoutY="122.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #212121;" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="680.0" AnchorPane.topAnchor="100.0">
                            <padding>
-                              <Insets left="10.0" right="10.0" top="20.0" />
+                              <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
                            </padding>
                            <children>
                               <VBox alignment="TOP_CENTER" layoutX="35.0" layoutY="62.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
-                                    <Label text="Adjacency Matrix" textFill="#0d7377" VBox.vgrow="ALWAYS">
-                                       <font>
-                                          <Font name="System Bold" size="20.0" />
-                                       </font>
-                                    </Label>
-                                    <GridPane style="-fx-background-color: #f00;">
-                                      <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                      </columnConstraints>
-                                      <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                      </rowConstraints>
-                                    </GridPane>
+                                    <VBox alignment="TOP_CENTER">
+                                       <children>
+                                          <Label text="Adjacency Matrix" textFill="#0d7377">
+                                             <font>
+                                                <Font name="System Bold" size="20.0" />
+                                             </font>
+                                          </Label>
+                                          <ScrollPane fitToHeight="true" fitToWidth="true" style="-fx-background-color: #212121;">
+                                             <content>
+                                                <VBox fx:id="adjTable" alignment="TOP_CENTER" prefWidth="100.0" style="-fx-background-color: #212121;" />
+                                             </content>
+                                             <VBox.margin>
+                                                <Insets top="20.0" />
+                                             </VBox.margin>
+                                          </ScrollPane>
+                                       </children>
+                                    </VBox>
+                                    <VBox alignment="CENTER">
+                                       <children>
+                                          <Label text="Dijkstra's analysis" textFill="#0d7377">
+                                             <font>
+                                                <Font name="System Bold" size="20.0" />
+                                             </font>
+                                          </Label>
+                                          <ScrollPane fitToHeight="true" fitToWidth="true" style="-fx-background-color: #212121;">
+                                             <content>
+                                                <VBox fx:id="data" alignment="TOP_CENTER" prefWidth="100.0" style="-fx-background-color: #212121;" />
+                                             </content>
+                                             <VBox.margin>
+                                                <Insets top="20.0" />
+                                             </VBox.margin>
+                                          </ScrollPane>
+                                       </children>
+                                       <VBox.margin>
+                                          <Insets top="25.0" />
+                                       </VBox.margin>
+                                    </VBox>
                                  </children>
                               </VBox>
                            </children>
