--- a/src/views/layout/Layout.fxml
+++ b/src/views/layout/Layout.fxml
@@ -91,7 +91,7 @@
                                           <Font size="20.0" />
                                        </font>
                                     </Label>
-                                    <Label text="Khaders" textFill="#0d7377">
+                                    <Label text="K.M.K" textFill="#0d7377">
                                        <font>
                                           <Font size="20.0" />
                                        </font>
