--- a/src/views/layout/Home.fxml
+++ b/src/views/layout/Home.fxml
@@ -167,6 +167,24 @@
                               <Font size="30.0" />
                            </font>
                         </Label>
+                        <VBox alignment="TOP_CENTER" layoutX="335.0" layoutY="-70.0" prefHeight="100.0" prefWidth="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <Label fx:id="alert" opacity="0.0" style="-fx-background-color: #212121; -fx-background-radius: 5;" text="Label" textFill="#14ffec">
+                                 <padding>
+                                    <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                                 </padding>
+                                 <effect>
+                                    <DropShadow height="10.0" radius="4.5" width="10.0" />
+                                 </effect>
+                                 <VBox.margin>
+                                    <Insets top="20.0" />
+                                 </VBox.margin>
+                                 <font>
+                                    <Font name="System Bold" size="16.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
                      </children>
                      <padding>
                         <Insets bottom="30.0" />
